adding changes related to release prepare

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <version>1.5.4-SNAPSHOT</version>
     <name>Maven P2 Profile Generation Plugin</name>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/Kishanthan/carbon-p2-plugin.git</developerConnection>
+   </scm>
+
     <dependencies>
         <dependency>
 			<groupId>org.apache.maven</groupId>
@@ -70,6 +74,16 @@
                     <target>1.5</target>
                 </configuration>
             </plugin>
+                <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <version>2.5</version>
+                </plugin>
+                <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                </plugin>
+
         </plugins>
     </build>
     <repositories>
@@ -97,6 +111,12 @@
     </repositories>
     <distributionManagement>
         <repository>
+            <id>nexus</id>
+            <name>Nexus Staging Repo</name>
+            <url>http://localhost:8081/nexus/service/local/staging/deploy/maven2</url>
+        </repository>
+
+        <!--repository>
             <id>wso2-maven2-repository</id>
             <name>WSO2 Maven2 Repository</name>
             <url>scp://dist.wso2.org/home/httpd/dist.wso2.org/maven2/</url>
@@ -105,7 +125,7 @@
             <id>wso2-maven2-snapshot-repository</id>
             <name>WSO2 Maven2 Snapshot Repository</name>
             <url>scp://dist.wso2.org/home/httpd/dist.wso2.org/snapshots/maven2/</url>
-        </snapshotRepository>
+        </snapshotRepository-->
     </distributionManagement>
 	<properties>
 		<tycho.version>0.13.0</tycho.version>
