--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.wso2.maven</groupId>
     <artifactId>carbon-p2-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.5.11</version>
+    <version>1.5.12-SNAPSHOT</version>
     <name>Maven P2 Profile Generation Plugin</name>
 
     <scm>
