--- a/pom.xml
+++ b/pom.xml
@@ -83,19 +83,6 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-deploy-plugin</artifactId>
                 </plugin>
-
-<plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.3</version>
-        <extensions>true</extensions>
-        <configuration>
-              <serverId>nexus-releases</serverId>
-          <nexusUrl>http://localhost:8081/nexus/</nexusUrl>
-          <!-- update this to the correct id! -->
-          <stagingProfileId>7b3ee339ed6</stagingProfileId>
-        </configuration>
-      </plugin>
         </plugins>
     </build>
     <repositories>
@@ -118,11 +105,12 @@
             <url>http://localhost:8081/nexus/service/local/staging/deploy/maven2</url>
         </repository-->
 
-        <repository>
-            <id>wso2-maven2-repository</id>
-            <name>WSO2 Maven2 Repository</name>
-            <url>scp://dist.wso2.org/home/httpd/dist.wso2.org/maven2/</url>
+	<repository>
+            <id>nexus-releases</id>
+            <name>WSO2 Release Distribution Repository</name>
+            <url>http://localhost:8081/nexus/service/local/staging/deploy/maven2/</url>
         </repository>
+
         <snapshotRepository>
             <id>wso2-maven2-snapshot-repository</id>
             <name>WSO2 Maven2 Snapshot Repository</name>
