--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.wso2.maven</groupId>
-    <artifactId>carbon-p2-plugin</artifactId>
+    <groupId>org.wso2.carbon</groupId>
+    <artifactId>carbon-deployment</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.5.22-SNAPSHOT</version>
     <name>Maven P2 Profile Generation Plugin</name>
