--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>carbon-deployment</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.5.24-SNAPSHOT</version>
-    <name>Maven P2 Profile Generation Plugin</name>
+    <name>Deployment Profile Generation</name>
 
     <scm>
         <developerConnection>scm:git:https://github.com/Kishanthan/carbon-p2-plugin.git</developerConnection>
