--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <groupId>org.wso2.carbon</groupId>
     <artifactId>carbon-deployment</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.5.24-SNAPSHOT</version>
+    <version>1.5.24</version>
     <name>Deployment Profile Generation</name>
 
     <scm>
         <developerConnection>scm:git:https://github.com/Kishanthan/carbon-p2-plugin.git</developerConnection>
-<tag>HEAD</tag>
+<tag>carbon-deployment-1.5.24</tag>
   </scm>
 
     <dependencies>
