--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <groupId>org.wso2.maven.p2.plugin</groupId>
     <artifactId>carbon-p2-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.5.47-SNAPSHOT</version>
+    <version>1.5.47</version>
     <name>Deployment Profile Generation</name>
 
     <scm>
 	<connection>scm:git:https://github.com/Kishanthan/carbon-p2-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/Kishanthan/carbon-p2-plugin.git</developerConnection>
 	<url>scm:git:https://github.com/Kishanthan/carbon-p2-plugin.git</url>
-<tag>HEAD</tag>
+<tag>carbon-p2-plugin-1.5.47</tag>
   </scm>
 
     <dependencies>
